--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
         <!-- Font Awesome CSS -->
-        <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+        
         <!-- Bootstrap Social -->
-        <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css" integrity="sha512-f8mUMCRNrJxPBDzPJx3n+Y5TC5xp6SmStstEfgsDXZJTcxBakoB5hvPLhAfJKa9rCvH+n3xpJ2vQByxLk4WP2g==" crossorigin="anonymous" />
+        
         <!-- CSS File -->
         <link rel="stylesheet" href="css/styles.css">
     </head>
@@ -26,19 +26,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-4">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link" href="#games">My Games</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Team</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -50,7 +47,7 @@
                     <div class="description">
                         <h1>Hello, Welcome To My official Website</h1>
                         <p>cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <a class="btn btn-outline-secondary btn-lg" href="#">See More</a>
+                        <a class="btn btn-outline-secondary btn-lg" href="#about">See More</a>
                     </div>
                 </div>
             </div>
@@ -72,10 +69,11 @@
             </div>
         </div>
 
-        <div class="portfolio">
+        <div class="portfolio" id="portfolio">
             <h1 class="text-center">Portfolio</h1>
             <div class="container">
                 <div class="row">
+
                     <div class="col-sm-12 col-md-4 col-lg-4">
                         <img src="images/portfolio/port13.png" class="img-fluid" />
                     </div>
@@ -88,76 +86,56 @@
                         <img src="images/portfolio/port3.png" class="img-fluid" />
                     </div>
 
-                    <div class="col-sm-12 col-md-4 col-lg-4">
-                        <img src="images/portfolio/port6.png" class="img-fluid" />
-                    </div>
-
-                    <div class="col-sm-12 col-md-4 col-lg-4">
-                        <img src="images/portfolio/port7.png" class="img-fluid" />
-                    </div>
-
-                    <div class="col-sm-12 col-md-4 col-lg-4">
-                        <img src="images/portfolio/port8.png" class="img-fluid" />
-                    </div>
-
-                    <div class="col-sm-12 col-md-4 col-lg-4">
-                        <img src="images/portfolio/port11.png" class="img-fluid" />
-                    </div>
-
-                    <div class="col-sm-12 col-md-4 col-lg-4">
-                        <img src="images/portfolio/Classic.jpg" class="img-fluid" />
-                    </div>
-
-                    <div class="col-sm-12 col-md-4 col-lg-4">
-                        <img src="images/portfolio/electric.png" class="img-fluid" />
-                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="blog">
+        <div class="blog" id="games">
             <div class="container">
-                <h1 class="text-center">Blog</h1>
+                <h1 class="text-center">My Games</h1>
                 <div class="row">
+
                     <div class="col-sm-12 col-md-4 col-lg-4">
                         <div class="card">
                             <div class="card-img">
-                                <img src="images/posts/polit.jpg" class="img-fluid" />
+                                <img src="images/posts/pong.png" class="img-fluid" />
                             </div>
                             <div class="card-body">
-                                <h4 class="card-title">Post Title</h4>
-                                <p class="card-text">proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <h4 class="card-title">Pong Game</h4>
+                                <p class="card-text">Made with scratch.</p>
                             </div>
                             <div class="card-footer">
-                                <a href="#" class="card-link">Read More</a>
+                                <a href="https://scratch.mit.edu/projects/418154730" class="card-link">Play</a>
                             </div>
                         </div>
                     </div>
+
                     <div class="col-sm-12 col-md-4 col-lg-4">
                         <div class="card">
                             <div class="card-img">
-                                <img src="images/posts/images.jpg" class="img-fluid" />
+                                <img src="images/posts/maze.png" class="img-fluid" />
                             </div>
                             <div class="card-body">
-                                <h4 class="card-title">Post Title</h4>
-                                <p class="card-text">proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <h4 class="card-title">Maze Runner Game</h4>
+                                <p class="card-text">Made with scratch.</p>
                             </div>
                             <div class="card-footer">
-                                <a href="#" class="card-link">Read More</a>
+                                <a href="https://scratch.mit.edu/projects/418758557" class="card-link">Play</a>
                             </div>
                         </div>
                     </div>
+
                     <div class="col-sm-12 col-md-4 col-lg-4">
                         <div class="card">
                             <div class="card-img">
-                                <img src="images/posts/imag2.jpg" class="img-fluid" />
+                                <img src="images/posts/house.png" class="img-fluid" />
                             </div>
                             <div class="card-body">
-                                <h4 class="card-title">Post Title</h4>
-                                <p class="card-text">proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <h4 class="card-title">Scratch House</h4>
+                                <p class="card-text">Made with scratch.</p>
                             </div>
                             <div class="card-footer">
-                                <a href="#" class="card-link">Read More</a>
+                                <a href="https://scratch.mit.edu/projects/419063355" class="card-link">See</a>
                             </div>
                         </div>
                     </div>
@@ -165,7 +143,7 @@
             </div>
         </div>
 
-        <div class="contact">
+        <div class="contact" id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 col-md-4 col-lg-4">
@@ -208,9 +186,9 @@
 
 
         <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
-        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-        <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.4/umd/popper.min.js" integrity="sha512-eUQ9hGdLjBjY3F41CScH3UX+4JDSI9zXeroz7hJ+RteoCaY+GP/LDoM8AO+Pt+DRFw3nXqsjh9Zsts8hnYv8/A==" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
         <!-- JS File -->
         <script type="text/javascript" src="js/main.js"></script>
