--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="col-sm-12 col-md-4 col-lg-4">
                         <div class="card">
                             <div class="card-img">
-                                <img src="images/posts/pong.png" class="img-fluid" />
+                                <img src="./images/posts/pong.png" class="img-fluid" />
                             </div>
                             <div class="card-body">
                                 <h4 class="card-title">Pong Game</h4>
@@ -113,7 +113,7 @@
                     <div class="col-sm-12 col-md-4 col-lg-4">
                         <div class="card">
                             <div class="card-img">
-                                <img src="images/posts/maze.png" class="img-fluid" />
+                                <img src="./images/posts/maze.png" class="img-fluid" />
                             </div>
                             <div class="card-body">
                                 <h4 class="card-title">Maze Runner Game</h4>
@@ -128,7 +128,7 @@
                     <div class="col-sm-12 col-md-4 col-lg-4">
                         <div class="card">
                             <div class="card-img">
-                                <img src="images/posts/house.png" class="img-fluid" />
+                                <img src="./images/posts/house.png" class="img-fluid" />
                             </div>
                             <div class="card-body">
                                 <h4 class="card-title">Scratch House</h4>
